--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,11 +23,109 @@
     <input type="submit" value="shearch">
   </form>
   <div class="content">
-    <div class="tablec">
-
-    </div>
+       <table class="tablec table table-hover">
+        <tr>
+          <th>Cliente</th>
+          <th>Número de Membro</th>
+          <th>Número de Família</th>
+          <th>Plano de Descrição</th>
+          <th>Prénom Per</th>
+          <th>Nom Per</th>
+          <th>Data de Nascimento</th>
+        </tr>
+        <tr>
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr>
+        <tr>
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr>
+        <tr>
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr>
+        <tr>
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr>
+        <tr>
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr>
+        <tr>
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr>
+        <tr>
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr>
+        <tr>
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr>
+        <tr>
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr>
+        <tr>
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr>
+       </table>
     <div class="details">
-
+         <h1>no details yet</h1>
     </div>
   </div>
 </section>
