--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -34,13 +34,45 @@ color: white;
   border: black 1px solid;
 }
 .content{
+  margin-top: 30px;
   width:100%;
   display: flex;
   gap: 20px;
   justify-content: space-between;
   align-items: center;
+  padding: 0 2%;
 }
 .content>div{
   height: 100%;
-  
+  border-radius: 10px;
+  border: black 1px solid;
+  height: 60vh;
+
+
+}
+.content .tablec{
+  width: 70%;
+  height: 100%;
+  height: 60vh;
+
+
+
+}
+/* .tablec table tr{
+  border-radius: 10px;
+
+}*/
+
+table tr:first-child{
+  color: white;
+  background-color: rgb(83, 139, 165);
+}
+table th,td{
+
+  padding: 5px;
+  text-align: center;
+  border: rgb(192, 192, 192) 0.5px solid;
+}
+.content .details{
+  width: 30%;
 }
