--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,7 +33,71 @@
           <th>Nom Per</th>
           <th>Data de Nascimento</th>
         </tr>
-        <tr>
+        <tr class="norm">
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr> <tr class="norm">
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr> <tr class="norm">
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr> <tr class="norm">
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr> <tr class="norm">
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr> <tr class="norm">
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr> <tr class="norm">
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr> <tr class="norm">
+          <td>Cliente</td>
+          <td>Número de Membro</td>
+          <td>Número de Família</td>
+          <td>Plano de Descrição</td>
+          <td>Prénom Per</td>
+          <td>Nom Per</td>
+          <td>Data de Nascimento</td>
+        </tr> <tr class="norm">
           <td>Cliente</td>
           <td>Número de Membro</td>
           <td>Número de Família</td>
@@ -42,7 +106,7 @@
           <td>Nom Per</td>
           <td>Data de Nascimento</td>
         </tr>
-        <tr>
+        <tr class="norm">
           <td>Cliente</td>
           <td>Número de Membro</td>
           <td>Número de Família</td>
@@ -51,81 +115,21 @@
           <td>Nom Per</td>
           <td>Data de Nascimento</td>
         </tr>
-        <tr>
-          <td>Cliente</td>
-          <td>Número de Membro</td>
-          <td>Número de Família</td>
-          <td>Plano de Descrição</td>
-          <td>Prénom Per</td>
-          <td>Nom Per</td>
-          <td>Data de Nascimento</td>
-        </tr>
-        <tr>
-          <td>Cliente</td>
-          <td>Número de Membro</td>
-          <td>Número de Família</td>
-          <td>Plano de Descrição</td>
-          <td>Prénom Per</td>
-          <td>Nom Per</td>
-          <td>Data de Nascimento</td>
-        </tr>
-        <tr>
-          <td>Cliente</td>
-          <td>Número de Membro</td>
-          <td>Número de Família</td>
-          <td>Plano de Descrição</td>
-          <td>Prénom Per</td>
-          <td>Nom Per</td>
-          <td>Data de Nascimento</td>
-        </tr>
-        <tr>
-          <td>Cliente</td>
-          <td>Número de Membro</td>
-          <td>Número de Família</td>
-          <td>Plano de Descrição</td>
-          <td>Prénom Per</td>
-          <td>Nom Per</td>
-          <td>Data de Nascimento</td>
-        </tr>
-        <tr>
-          <td>Cliente</td>
-          <td>Número de Membro</td>
-          <td>Número de Família</td>
-          <td>Plano de Descrição</td>
-          <td>Prénom Per</td>
-          <td>Nom Per</td>
-          <td>Data de Nascimento</td>
-        </tr>
-        <tr>
-          <td>Cliente</td>
-          <td>Número de Membro</td>
-          <td>Número de Família</td>
-          <td>Plano de Descrição</td>
-          <td>Prénom Per</td>
-          <td>Nom Per</td>
-          <td>Data de Nascimento</td>
-        </tr>
-        <tr>
-          <td>Cliente</td>
-          <td>Número de Membro</td>
-          <td>Número de Família</td>
-          <td>Plano de Descrição</td>
-          <td>Prénom Per</td>
-          <td>Nom Per</td>
-          <td>Data de Nascimento</td>
-        </tr>
-        <tr>
-          <td>Cliente</td>
-          <td>Número de Membro</td>
-          <td>Número de Família</td>
-          <td>Plano de Descrição</td>
-          <td>Prénom Per</td>
-          <td>Nom Per</td>
-          <td>Data de Nascimento</td>
+        <tr class="buttoncon">
+          <td><button> &LeftArrow; previous </button></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td> <button> next &rightarrow; </button></td>
         </tr>
        </table>
+
     <div class="details">
-         <h1>no details yet</h1>
+      <div class="noclick">
+        <h1>no details yet</h1>
+      </div>
     </div>
   </div>
 </section>
