--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,28 +2,28 @@
   <form action="">
     <div>
       <label for="cilent">Client :</label>
-    <input type="search" id="client">
+    <input type="search" name="client" [(ngModel)]="client" id="client">
     </div>
     <div>
       <label for="nm">Número de membro :</label>
-    <input type="search" id="nm">
+    <input type="search" name="numM" [(ngModel)]="numM" id="nm">
     </div>
     <div>
       <label for="nf">Número de família :</label>
-    <input type="search" id="nf">
+    <input type="search" name="numF" [(ngModel)]="numf" id="nf">
     </div>
     <div>
       <label for="prenom">Prenom Per :</label>
-    <input type="search" id="prenom">
+    <input type="search" name="Prenom" [(ngModel)]="prenom" id="prenom">
     </div>
     <div>
       <label for="nom">Nom Per :</label>
-    <input type="search" id="nom">
+    <input type="search" name="nom" [(ngModel)]="nom"  id="nom">
     </div>
-    <input type="submit" value="shearch">
+    <input type="submit" (click)="search()" value="search">
   </form>
   <div class="content">
-       <table class="tablec table table-hover">
+       <table *ngIf="tab!=null" class="tablec table table-hover">
         <tr>
           <th>Cliente</th>
           <th>Número de Membro</th>
@@ -33,30 +33,126 @@
           <th>Nom Per</th>
           <th>Data de Nascimento</th>
         </tr>
-        <tr class="norm" *ngFor="let item of tab">
+        <tr class="norm" *ngFor="let item of tab"  [class.selected]="item === selectedRow" (click)="selectRow(item)">
           <td>{{item.cliente}}</td>
-          <td>{{item.NumeroDeMembro}}</td>
-          <td>{{item.NumeroDeFamilia}}</td>
-          <td>{{item.PlanoDeDescricao}}</td>
-          <td>{{item.PrenomPer}}</td>
-          <td>{{item.NomPer}}</td>
-          <td>{{item.DataDeNascimento}}</td>
+          <td>{{item.numeroDeMembro}}</td>
+          <td>{{item.numeroDeFamilia}}</td>
+          <td>{{item.planoDeDescricao}}</td>
+          <td>{{item.prenomPer}}</td>
+          <td>{{item.nomPer}}</td>
+          <td>{{item.dataDeNascimento}}</td>
         </tr>
         <tr class="buttoncon">
-          <td><button> &LeftArrow; previous </button></td>
+          <td><button (click)="previousPage()"> &LeftArrow; previous </button></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          <td> <button> next &rightarrow; </button></td>
+          <td> <button (click)="nextPage()"> next &rightarrow; </button></td>
         </tr>
        </table>
+       <div class="datanot" *ngIf="tab==null">
+         <h1>data not found</h1>
+       </div>
 
-    <div class="details">
-      <div class="noclick">
-        <h1>no details yet</h1>
+       <div class="details">
+        <div class="noclick" *ngIf="!selectedRow">
+          <h1>No details yet</h1>
+        </div>
+        <div class="details-content" *ngIf="selectedRow">
+          <h1>Details:</h1>
+          <div class="details-row">
+            <span class="details-label">Cliente:</span>
+            <span class="details-value">{{ selectedRow.cliente }}</span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Número de Membro:</span>
+            <span class="details-value">{{ selectedRow.numeroDeMembro }}</span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Número de Família:</span>
+            <span class="details-value">{{ selectedRow.numeroDeFamilia }}</span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Plano de Descrição:</span>
+            <span class="details-value">{{ selectedRow.planoDeDescricao }}</span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Prenom Per:</span>
+            <span class="details-value">{{ selectedRow.prenomPer }}</span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Nom Per:</span>
+            <span class="details-value">{{ selectedRow.nomPer }}</span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Data de Nascimento:</span>
+            <span class="details-value">{{ selectedRow.dataDeNascimento }}</span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Data de Entrada por Organismo:</span>
+            <span class="details-value">{{ selectedRow.dataDeEntradaPorOrganismo }}</span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Data de Início da Cobertura:</span>
+            <span class="details-value">{{ selectedRow.dataDeInicioDaCobertura }}</span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Hospitalisation:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.hospitalisation, 'red-x': !selectedRow.hospitalisation }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Ambulatoire:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.ambulatoire, 'red-x': !selectedRow.ambulatoire }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Maternite:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.maternite, 'red-x': !selectedRow.maternite }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Traitement Hormonal:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.traitementHormonal, 'red-x': !selectedRow.traitementHormonal }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Supplements:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.supplements, 'red-x': !selectedRow.supplements }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Vitamines:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.vitamines, 'red-x': !selectedRow.vitamines }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Check Up:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.checkUp, 'red-x': !selectedRow.checkUp }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Traitement Psychiatrique:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.traitementPsychiatrique, 'red-x': !selectedRow.traitementPsychiatrique }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Traitement Psychologique:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.traitementPsychologique, 'red-x': !selectedRow.traitementPsychologique }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Maladies Chroniques:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.maladiesChroniques, 'red-x': !selectedRow.maladiesChroniques }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Maladies Congenitales:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.maladiesCongenitales, 'red-x': !selectedRow.maladiesCongenitales }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Maladies Preexistantes:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.maladiesPreexistantes, 'red-x': !selectedRow.maladiesPreexistantes }"></span>
+          </div>
+          <div class="details-row">
+            <span class="details-label">Test COVID:</span>
+            <span class="details-value" [ngClass]="{ 'green-check': selectedRow.testCOVID, 'red-x': !selectedRow.testCOVID }"></span>
+          </div>
+
+        </div>
       </div>
-    </div>
+
   </div>
 </section>
